--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 file.reference.bcprov-jdk16-145.jar=../lib/bcprov-jdk16-145.jar
 file.reference.commons-beanutils-1.9.3.jar=../lib/commons-beanutils-1.9.3.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
-file.reference.commons-dbcp-1.2.2.jar=../lib/commons-dbcp-1.2.2.jar
+file.reference.commons-dbcp-1.2.2.jar=D:\\GGC_Java_Systems\\lib\\commons-dbcp-1.2.2.jar
+file.reference.commons-dbcp2-2.7.0.jar=D:\\GGC_Java_Systems\\lib\\commons-dbcp2-2.7.0.jar
 file.reference.commons-lang3-3.3.2.jar=../lib/commons-lang3-3.3.2.jar
 file.reference.commons-pool-1.5.4.jar=../lib/commons-pool-1.5.4.jar
 file.reference.controlsfx-8.40.12.jar=../lib/controlsfx-8.40.12.jar
@@ -82,8 +83,9 @@ javac.classpath=\
     ${reference.gcard-validator.jar}:\
     ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
-    ${file.reference.commons-dbcp-1.2.2.jar}:\
     ${file.reference.commons-lang3-3.3.2.jar}:\
+    ${file.reference.commons-dbcp-1.2.2.jar}:\
+    ${file.reference.commons-dbcp2-2.7.0.jar}:\
     ${file.reference.commons-pool-1.5.4.jar}:\
     ${file.reference.ini4j-0.5.1.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
@@ -116,6 +118,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -163,6 +166,8 @@ javafx.run.width=800
 javafx.signing.blob=false
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
+jlink.launcher=false
+jlink.launcher.name=GCardAppFx
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
