--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,19 +33,22 @@ dist.jar=${dist.dir}/GCardAppFx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcprov-jdk16-145.jar=../lib/bcprov-jdk16-145.jar
+file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-beanutils-1.9.3.jar=../lib/commons-beanutils-1.9.3.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
 file.reference.commons-dbcp-1.2.2.jar=../lib/commons-dbcp-1.2.2.jar
+file.reference.commons-dbcp2-2.7.0.jar=../lib/commons-dbcp2-2.7.0.jar
 file.reference.commons-lang3-3.3.2.jar=../lib/commons-lang3-3.3.2.jar
+file.reference.commons-logging-1.1.1.jar=../lib/commons-logging-1.1.1.jar
 file.reference.commons-pool-1.5.4.jar=../lib/commons-pool-1.5.4.jar
+file.reference.commons-pool2-2.4.2.jar=../lib/commons-pool2-2.4.2.jar
 file.reference.controlsfx-8.40.12.jar=../lib/controlsfx-8.40.12.jar
 file.reference.core-3.3.3.jar=../lib/zxing/core-3.3.3.jar
 file.reference.fontawesomefx-8.9.jar=../lib/fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=../lib/ini4j-0.5.1.jar
 file.reference.jackson-annotations-2.9.5.jar=../lib/jackson-annotations-2.9.5.jar
 file.reference.jai-imageio-core-1.4.0.jar=../lib/zxing/jai-imageio-core-1.4.0.jar
-file.reference.jasperreports-6.7.0.jar=D:\\GGC_Java_Systems\\jasperreports-6.7.0.jar
+file.reference.jasperreports-6.7.0.jar=../lib/jasperreports-6.7.0.jar
 file.reference.javase-3.3.3.jar=../lib/zxing/javase-3.3.3.jar
 file.reference.jcommander-1.72.jar=../lib/zxing/jcommander-1.72.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
@@ -55,16 +58,15 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${libs.jpa20-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
     ${reference.appdriver-agent.jar}:\
     ${reference.appdriver-agentfx.jar}:\
     ${reference.appdriver-base.jar}:\
     ${reference.appdriver-iface.jar}:\
-    ${reference.appdriver-agentfx-ui.jar}:\
     ${reference.appdriver-constant.jar}:\
     ${reference.gcard-trans-agentFX.jar}:\
+    ${reference.appdriver-agentfx-ui.jar}:\
     ${reference.client-agent.jar}:\
     ${reference.client-base.jar}:\
     ${reference.parameters-agent.jar}:\
@@ -80,11 +82,14 @@ javac.classpath=\
     ${reference.gdevice.jar}:\
     ${reference.replication-utility.jar}:\
     ${reference.gcard-validator.jar}:\
-    ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
-    ${file.reference.commons-dbcp-1.2.2.jar}:\
+    ${file.reference.bcprov-jdk18on-175.jar}:\
     ${file.reference.commons-lang3-3.3.2.jar}:\
+    ${file.reference.commons-dbcp-1.2.2.jar}:\
+    ${file.reference.commons-dbcp2-2.7.0.jar}:\
     ${file.reference.commons-pool-1.5.4.jar}:\
+    ${file.reference.commons-pool2-2.4.2.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.ini4j-0.5.1.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
@@ -95,7 +100,8 @@ javac.classpath=\
     ${file.reference.jcommander-1.72.jar}:\
     ${file.reference.commons-beanutils-1.9.3.jar}:\
     ${file.reference.jackson-annotations-2.9.5.jar}:\
-    ${file.reference.jasperreports-6.7.0.jar}
+    ${file.reference.jasperreports-6.7.0.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,6 +122,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -163,6 +170,8 @@ javafx.run.width=800
 javafx.signing.blob=false
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
+jlink.launcher=false
+jlink.launcher.name=GCardAppFx
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
