--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\IDM Computer Solutions\\UltraEdit\\UEdit32.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\micha\\AppData\\Roaming\\NetBeans\\16\\build.properties
